[metadata]
name = peewee-session
author = Oz N Tiram
author-email = oz.tiram@gmail.com
summary = Create and Manage Bottle sessions with Peewee ORM.
description-file = README.md
home-page = https://github.com/oz123/peewee-session
license = LGPLv3
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development

[files]
packages =
    peewee_session

data_files =
    views = views/*
